# CMT-VNA

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  message_for_charlie.txt  pyproject.toml  release-please-config.json  requirements.txt  setup.cfg  vna.py
.github/workflows/: ci.yml  claude-code-review.yml  push.yml  release-please.yml
cmt_vna/: .calkit.py.swp  .data.py.swp  .vna.py.swp  __init__.py  calkit.py  data.py  vna.py
cmt_vna.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cmt_vna/tests/: __init__.py  test_calkit.py
data/: 20241016_143337.npz  20241016_143359.npz  20241029_120850.npz  20241029_152955.npz  20241029_153009.npz  20250113_155904.npz  20250113_160343.npz  20250113_160803.npz  20250113_161924.npz  20250124_125250.npz  20250124_125307.npz  20250124_125324.npz  20250124_125341.npz  20250124_125358.npz  20250124_125415.npz  20250124_125706.npz  20250124_125723.npz  20250124_125740.npz  20250124_131237.npz  20250124_131254.npz  20250124_195419.npz  20250303_113816.npz  20250303_113948.npz  20250310_102550.npz  20250310_102638.npz  20250311_161643.npz  20250311_161752.npz  20250311_162006.npz  20250311_162018.npz  20250311_162347.npz  20250311_162359.npz  20250311_162412.npz  20250311_162424.npz  20250311_162436.npz  20250311_162932.npz  20250311_162944.npz  20250311_163007.npz  20250311_163019.npz  20250311_163031.npz  20250311_163116.npz  (+89 more)
data/balun_data12/: 20250129_105305.npz  20250129_105634.npz  20250129_105648.npz  20250129_105702.npz  20250129_105716.npz  20250129_105730.npz
data/balun_data21/: 20250129_110035.npz  20250129_110049.npz  20250129_110103.npz  20250129_110117.npz  20250129_110131.npz
data/cable_sparams/: 20250331_093928_sparams.npz  20250331_093928_standards.npz  20250331_102747_sparams.npz  20250331_102747_standards.npz  20250509_165345_VNAANT_sparams.npz  20250509_165609_VNAN_sparams.npz  20250509_165830_VNAO_sparams.npz  20250509_170041_VNAS_sparams.npz  20250509_170243_VNAL_sparams.npz  20250509_170243_data.npz
data/cal10000/: 20250220_144155_freqs.npz  20250220_144908_calibration.npz
data/cals/: 20250113_160252_calibration.npz  20250113_161837_calibration.npz  20250124_125154_calibration.npz  20250310_102048_calibration.npz  20250321_151142_calibration.npz  20250325_162513_calibration.npz  20250326_112456_calibration.npz
data/direct/: 20250217_155324_calibration.npz  20250217_163948_calibration.npz
data/direct10000/: 20250220_150132_calibration.npz
data/fem_data/: 20250124_195509.npz  20250124_195523.npz  20250129_102153.npz  20250129_102527.npz  20250129_102541.npz  20250129_102555.npz  20250129_102609.npz  20250129_102623.npz  20250129_104013.npz  20250129_104027.npz  20250129_104041.npz  20250129_104056.npz  20250129_104109.npz
data/full_scale_test/: 20250604_151758_vna_data.npz  20250604_152220_vna_data.npz  20250604_170205_vna_data.npz
data/reverse/: 20250217_155722_calibration.npz  20250217_164100_freqs.npz  20250217_164235_calibration.npz
data/reverse10000/: 20250220_151229_calibration.npz
data/scale_antenna/: 20250307_170549.npz  20250307_170602.npz  20250307_170721.npz  20250307_170734.npz  20250307_170909.npz  20250307_170922.npz  20250307_171157.npz  20250307_171210.npz
data/scale_antenna1/: 20250312_161041.npz  20250312_162628.npz  20250312_162842.npz  20250312_162855.npz  20250312_162907.npz  20250312_162919.npz  20250312_162931.npz  20250312_162943.npz  20250312_162955.npz  20250312_163007.npz  20250312_163019.npz  20250312_163031.npz  20250312_163044.npz  20250312_163056.npz  20250312_163108.npz  20250312_163120.npz  20250312_163132.npz  20250312_163144.npz  20250312_163157.npz  20250312_163209.npz  20250312_163221.npz  20250313_104526.npz  20250313_105257.npz  20250313_105323.npz  20250313_105335.npz  20250313_105347.npz  20250313_105359.npz  20250313_105411.npz  20250313_105441.npz  20250313_105453.npz  20250313_105505.npz  (+2 more)
scripts/: .calibration.py.swp  .measure_and_plot.py.swp  .measure_s11.py.swp  .plotting_for_aaron_picky.py.swp  calibrate.py  cmt-rvna.service  cmtvna.service  external_measurement.py  field_measurements.py  get_cable_network_sparameters.py  jank_lo.npz  measure_and_plot.py  measure_s11.py  measure_s11_old.py  plot.py  plot_new.py  plotting_for_aaron_picky2.py  raul_s11.py  service_file.txt  small_ant_meas.npz  smd_50load.npz  take_data.py  testing.py
src/: vna.py
tests/: test_calkit.py  test_vna.py  unit_tests_tests.ipynb  unit_tests_tests_test.ipynb
(+365 files in other folders)
