[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmt_vna"
version = "0.0.1"
description = "Control code for CMT VNA."
readme = "README.md"
license = {text = "MIT"}
authors = [{ name="Charlie Tolley", email="tolley412e@berkeley.edu" }]
requires-python = ">=3.9"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "numpy",
  "matplotlib",
  "pyserial",
  "pyVISA",
  "pyvisa-py",
  "switch_network @ git+https://github.com/EIGSEP/switchNW.git",
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "mockserial @ git+https://github.com/christianhbye/mockserial.git",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "-o junit_family=legacy",
]

[tool.black]
line-length = 79
extend-exclude = """
(
  ^/scripts/test_lab_scripts/
  | .*\\.ipynb$
)
"""
