[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmt_vna"
version = "0.0.2"
description = "Control code for CMT VNA."
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name="Charlie Tolley", email="tolley412e@berkeley.edu" },
  { name="Christian Hellum Bye", email="cbh@berkeley.edu" },
]
requires-python = ">=3.9"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "numpy",
  "matplotlib",
  "picohost>=0.0.3",
  "pyserial",
  "pyVISA",
  "pyvisa-py",
]

[project.optional-dependencies]
dev = [
  "build",
  "twine",
  "ruff",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-timeout",
  "pyserial-mock",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--cov=cmt_vna",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "-o junit_family=legacy",
  "--timeout=60",
]

[tool.ruff]
line-length = 79
exclude = ["scripts/lab_test_scripts", "examples", "*.ipynb"]

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"src/*/__init__.py" = ["F401"]
