[metadata]
name = cmt_vna
version = 0.0.1
description = Software to control CMT VNA
url = https://github.com/EIGSEP/CMT
author = Christian Hellum Bye
author_email = chbye@berkeley.edu

[options]
python_requires = >= 3.7
packages = find:

[flake8]
ignore = E203, W503
per-file-ignores =
    __init__.py:F401
max-line-length = 79
