[metadata]
name = cmt_vna
version = 0.0.1
author = Christian Hellum Bye, Charlie Tolley
author_email = chbye@berkeley.edu, tolley412@berkeley.edu

[options]
python_requires = >= 3.6
packages = find:
install_requires =
    numpy
    matplotlib
    pyserial
    PyVISA
    pyvisa-py
    switch_network @ git+https://github.com/EIGSEP/switchNW.git

[options.extras_require]
dev =
    black
    build
    flake8
    pytest
    pytest-cov
